--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/jkc-mca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
+    <p>JKC MCA 2023-25<a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
 </body>
 </html>
