--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
-    <p>JKC MCA 2023-25<a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
 </body>
 </html>
