--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
     <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/jkc-mca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#fff">
