--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
+    <p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
 </body>
 </html>
