--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
+    <meta name="google-site-verification" content="M71E3bm8hWVITzGUAEQctfFjV_ANKWKZHmhzgb-_N0A" />
 </head>
 <body>
     <p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
