--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="M71E3bm8hWVITzGUAEQctfFjV_ANKWKZHmhzgb-_N0A" />
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/jkc-mca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
