--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/jkc-mca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-navbutton-color" content="#fff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
     <meta property="og:title" content="JKC MCA" />
     <meta property="og:description" content="JKC MCA is website build by student of  JKC college" />
-    <meta property="og:url" content=https://jkc-mca.netlify.app/"" />
+    <meta property="og:url" content="https://jkccmca.netlify.app/" />
     <title>JKC MCA</title>
     <meta name="description" content="JKC MCA is website build by student of  JKC college to share information"> 
     <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
@@ -17,6 +16,6 @@
     <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
     </head>
 <body>
-    <p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
+    <iframe src="https://sites.google.com/view/jkc-mca/home" title="jkc mca 2023-2025" height="100" width="100" />
 </body>
 </html>
