--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-navbutton-color" content="#fff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
-    <meta property="og:title" content="JKC MCA" />
-    <meta property="og:description" content="JKC MCA is website build by student of  JKC college" />
-    <meta property="og:url" content="https://jkccmca.netlify.app/" />
+    <meta property="og:title" content="JKC MCA">
+    <meta property="og:description" content="JKC MCA is website build by student of JKC college">
+    <meta property="og:url" content="https://jkccmca.netlify.app/">
     <title>JKC MCA</title>
-    <meta name="description" content="JKC MCA is website build by student of  JKC college to share information"> 
+    <meta name="description" content="JKC MCA is website build by student of JKC college to share information"> 
     <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
-    </head>
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0">
+</head>
 <body>
-    <iframe src="https://sites.google.com/view/jkc-mca/home" title="jkc mca 2023-2025" height="100" width="100" />
+    <iframe src="https://sites.google.com/view/jkc-mca/home" title="jkc mca 2023-2025" height="100" width="100"></iframe>
 </body>
 </html>
