--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="msapplication-navbutton-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
-    <meta property="og:title" content="JKC MCA">
-    <meta property="og:description" content="JKC MCA is a website built by students of JKC college.">
-    <meta property="og:url" content="https://jkccmca.netlify.app/">
-    <title>JKC MCA</title>
-    <meta name="description" content="JKC MCA is a website built by students of JKC college to share information."> 
-    <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0">
+    <title>JKC MCA 2023-25</title>
 </head>
 <body>
-    <iframe src="https://sites.google.com/view/jkc-mca/home" title="jkc mca 2023-2025" height="600" width="800"></iframe>
+    <h1>JKC MCA STUDENTS</h1>
+    <iframe src="https://sites.google.com/view/jkc-mca/home" width="100%" height="600" style="border:none;"></iframe>
 </body>
 </html>
