--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JKC MCA 2023-25</title>
+    <title>JKC MCA</title>
+    <script type="text/javascript">
+        window.location.href = "https://sites.google.com/view/jkc-mca/home";
+    </script>
 </head>
 <body>
-    <h1>JKC MCA STUDENTS</h1>
-    <iframe src="https://sites.google.com/view/jkc-mca/home" width="100%" height="600" style="border:none;"></iframe>
+    <p>JKC MCA 2023-25, <a href="https://sites.google.com/view/jkc-mca/home">click here</a>.</p>
 </body>
 </html>
