--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JKC MCA</title>
-    <script type="text/javascript">
-        window.location.href = "https://sites.google.com/view/jkc-mca/home";
-    </script>
+    <title>JKC MCA...</title>
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />">
+    <meta http-equiv="refresh" content="5;url=https://www.mcajkcc.com">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 20%;
+        }
+    </style>
 </head>
 <body>
-    <p>JKC MCA 2023-25, <a href="https://sites.google.com/view/jkc-mca/home">click here</a>.</p>
+    <h1>JKCC MCA...</h1>
+    <p>JKC MCA 2023-25<a href="https://sites.google.com/view/jkc-mca/home">link</a>.</p>
 </body>
 </html>
