--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/jkc-mca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JKC MCA...</title>
-    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />">
-    <meta http-equiv="refresh" content="5;url=https://www.mcajkcc.com">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20%;
-        }
-    </style>
-</head>
+    <meta name="theme-color" content="#fff">
+    <meta name="msapplication-navbutton-color" content="#fff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
+    <meta property="og:title" content="JKC MCA" />
+    <meta property="og:description" content="JKC MCA is website build by student of  JKC college" />
+    <meta property="og:url" content=https://jkc-mca.netlify.app/"" />
+    <meta property="og:url" content="https://jkccmca.netlify.app/" />
+    <title>JKC MCA</title>
+    <meta name="description" content="JKC MCA is website build by student of  JKC college to share information"> 
+    <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
+    </head>
 <body>
-    <h1>JKCC MCA...</h1>
-    <p>JKC MCA 2023-25<a href="https://sites.google.com/view/jkc-mca/home">link</a>.</p>
+<p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
 </body>
 </html>
