--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,17 +7,16 @@
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-navbutton-color" content="#fff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
-    <meta property="og:title" content="JKC MCA" />
-    <meta property="og:description" content="JKC MCA is website build by student of  JKC college" />
-    <meta property="og:url" content=https://jkc-mca.netlify.app/"" />
-    <meta property="og:url" content="https://jkccmca.netlify.app/" />
+    <meta property="og:title" content="JKC MCA">
+    <meta property="og:description" content="JKC MCA is a website built by students of JKC college">
+    <meta property="og:url" content="https://jkccmca.netlify.app/">
     <title>JKC MCA</title>
-    <meta name="description" content="JKC MCA is website build by student of  JKC college to share information"> 
+    <meta name="description" content="JKC MCA is a website built by students of JKC college to share information"> 
     <meta name="keywords" content="jkc mca, jkc, jkc college mca, jkc mca 2023, jagarlamudi kuppuswamy college">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0" />
-    </head>
+    <meta name="google-site-verification" content="luV226r4P6LIe3Z58GfyuLnNsi0VS1hUWLY4AalRHv0">
+</head>
 <body>
-<p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
+    <p>JKC MCA 2023-25 <a href="https://sites.google.com/view/jkc-mca">link to JKC - MCA</a>.</p>
 </body>
 </html>
